[package]
name = "req_guard"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
ctrlc = "3.4.5"
notify = "8.0.0"
once_cell = "1.20.3"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "signal", "sync"] }
tokio-macros = "2.4.0"